k8s/overlays/preprod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: preprod
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
