k8s/overlays/preprod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-website
spec:
  ingressClassName: nginx
  rules:
    - host: digital-experience-preprod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-website
                port:
                  number: 80
